fix title overflow

--- a/client/styles/Index.module.css
+++ b/client/styles/Index.module.css
@@ -21,18 +21,6 @@
   justify-content: center;
 }
 
-.cardContainer {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 100%;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 1em;
-  gap: 1em;
-  transition: all 0.5s ease;
-}
-
 .buttonContainer {
   padding: 1em;
   display: flex;
